static/styles.css
 body {
     position: static;
     height:100%;
}
 .affix {
     top:0;
     width: 100%;
     z-index: 9999 !important;
}

 .navbar {
     margin-bottom: 0px;
     border-radius: 0px;
}
 .navbar .navbar-nav {
     display: inline-block;
     float: none;
     vertical-align: top;
}
 .navbar .navbar-collapse {
     text-align: center;
}
 .affix ~ .container-fluid {
     position: relative;
     top: 60px;
}

 .centered {
     text-align: center;
}
 .bold {
     font-weight: bold;
}
 .parent {
     display: flex;
     padding: 0;
}
 .child {
     width: 1000px;
     margin: auto;
}
 .parent-footer {
     display: flex;
     padding: 0;
}
 .child-footer {
     width: 1000px;
     margin: auto;
    /* Magic! */
}
 .h-100 {
     height: 100%;
}
 #logo, #menu-logo {
     font-weight: bold;
}

 #titulo {
     margin-top: 25px;
     margin-bottom: 25px;
     margin-right:-15px;
     margin-left:-15px;
     padding-top: 1px;
     padding-bottom: 8px;
     background: rgba(0,0,0,0.3);
     color: whitesmoke;
}

 @media only screen and (max-width: 767px) {
    #menu-logo {
         display: none;
    }
    #footer-wide{
        display:none;
    }
    .lang-flag {
        margin-bottom: -10px;
        padding-right: 5px;
        padding-top: 10px;
    }
}
 @media only screen and (min-width: 768px) {
    #logo {
         display: none;
    }
    #footer-small{
        display:none;
    }
    .lang-flag {
        margin-bottom: -45px;
        padding-right: 20px;
        padding-top: 20px;
    }
}
 #footer {
     width:100%;
     padding:10px;
     padding-bottom:0px;
     background:#222;
     color:whitesmoke;
     text-align:left;
}

 #footer a {
     color: #9d9d9d;
}
 #footer a:hover {
     color: whitesmoke;
     text-decoration: none;
}
 .autofixed {
     position:fixed;
     bottom:0;
     left:0;
    /*Here's what sticks it*/
}
 .navbar-header {
     padding-left: 10px;
     padding-right: 10px;
}
 .contenido {
     //padding: 10px;
     padding-top: 5px;
     padding-bottom: 60px;
     height: 100%;
     margin: 0px;
}

 .multi-contenido {
     //padding: 10px;
     padding-top: 5px;
     padding-bottom: 20px;
     height: 100%;
     margin: 0px;
}

 #productos li {
     list-style-type: circle;
     }

     #productos ul {
     padding-left: 23px;}

 #productos table {
    margin-left:auto;
    margin-right:auto;
}

 #map {
     height: 400px;
    /* The height is 400 pixels */
     width: 100%;
    /* The width is the width of the web page */
}
 .link-sobre-blanco:hover {
     text-decoration: none;
}
    iframe {
        //width: 100% !important;
        //height: 100% !important;
    }

.espaciada {
    margin-bottom: 15px;
}

.row {
    margin-left: 0px;
    margin-right: 0px;
}


//.col-lg-1, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-md-1, .col-md-10, .col-md-11, .col-md-12, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-sm-1, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-xs-1, .col-xs-10, .col-xs-11, .col-xs-12, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9 {
    padding-left: 0px;
    padding-right: 0px;
}

//#home {
    background: #ffffff;
}
#productos {
    background-color: #dddddd;
}
//#localizacion {
    background: #ffffff;
}

is-invalid {
    border-color: red;
}

.horizontal {
    display: flex;
    justify-content: center;
}

.vertical {
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.foto-ofertas {
    top:0;
    bottom:0;
    margin:auto;
}

.lang-flag {
    text-align: right;
}

